# open_weather13

./: README.md  README_EN.md  README_ZH-TW.md  __init__.py  pyproject.toml  server.py  setup.py
.github/workflows/: sonar.yml
